수정사항 반영

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </ul>
     </nav>
   </header>
+
   <main>
     <!-- banner -->
     <div class="top-banner">
@@ -129,7 +130,7 @@
 
     <!-- section7__빠르게 성장 -->
     <section class="section7__grow">
-      <p class="title bold">
+      <p class="title4 bold">
         <!-- 띄어쓰기 포함 최대17자 -->
         플로웨이는 빠르게 서비스를 확장하고
         <br />
@@ -230,6 +231,7 @@
 
     </div>
   </footer>
+
   <div class="footer__bottom">
     <img src="./statics/images/icons/Footer_Copy.png" />
   </div>
