수정사항 변경

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/index.css" />
   <!-- tab-title -->
-  <title>start up school landing page</title>
+  <title>Haebom landing page</title>
   <script>
     function colorSvgIcons() {
       let colorIcon = getComputedStyle(
